Use bower-installed fonts + livereload css not styl

--- a/public/stylus/spartacus.styl
+++ b/public/stylus/spartacus.styl
@@ -1,6 +1,7 @@
 // Note: Certain includes (e.g. mixins + lib files are part of the
 // grunt-contrib-stylus conf.
 
+
 @import '_throbber';
 @import '_buttons';
 @import '_full-error';
@@ -13,6 +14,7 @@ html, body {
     background: $bg-color;
     color: $dark-gray;
     grain();
+    font-family: $open-stack;
     height: 100%;
     margin: 0;
     min-width: 250px;
