--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -1,1 +1,5 @@
-<h1>{{ heading }}</h1>
+<section class="login">
+  <h1>{{ gettext('Sign In') }}</h1>
+  <p>{{ gettext('Sign in to continue with the payment') }}</p>
+  <a id="signin" class="sign-in" href="#">{{ gettext('Sign in') }}</a>
+</section>
