Add page layouts and improve error styling

--- a/public/stylus/_buttons.styl
+++ b/public/stylus/_buttons.styl
@@ -8,6 +8,7 @@ a.button,
     font: 500 14px/40px "Fira Sans", "Open Sans", "Helvetica Neue", Arial, sans-serif;
     gradient-two-color($button-bg-color, $button-bg-color2);
     height: 40px;
+    min-width: 75px;
     overflow: hidden;
     padding: 0 10px;
     position: relative;
