--- a/public/stylus/inc/vars.styl
+++ b/public/stylus/inc/vars.styl
@@ -38,7 +38,7 @@ $button-cta-text-color = $button-text-color;
 $button-cta-text-shadow-color = lighten($button-cta-bg-color, 10%);
 $button-cta-text-color-disabled = darken($button-cta-bg-color2, 2.5%);
 
-$full-error-text-color = $white;
+$full-error-text-color = #FAFAFA;
 
 
 // Vars representing minimum px values for media queries;
