--- a/public/templates/locked.html
+++ b/public/templates/locked.html
@@ -1,1 +1,17 @@
-<h1>{{ gettext('Locked') }}</h1>
+{% extends 'base.html' %}
+{% import "_macros.html" as macro %}
+
+{% block mainclass %}full-error{% endblock %}
+
+{% block page %}
+  <section class="content error">
+    <div class="msg">
+      <h1>{{ gettext('Error') }}</h1>
+      <p>{{ gettext('You entered the wrong pin too many times. Your account is locked. Please try your purchase again in 5 minutes.') }}</p>
+    </div>
+  </section>
+
+  <menu class="buttons" type="toolbar">
+    {{ macro.button(gettext('OK'), modifier='cta') }}
+  </menu>
+{% endblock %}
