--- a/public/stylus/_full-error.styl
+++ b/public/stylus/_full-error.styl
@@ -1,45 +1,41 @@
 .full-error {
-    position: relative;
+    background-color: $grain-bg-color;
+    grain();
+    max-width: 100%;
+    padding: 0 10px;
 
-    .page {
-        display: block;
-        background-color: $grain-bg-color;
-        grain();
-    }
-
-    main {
-        bottom: 0;
-        color: $full-error-text-color;
-        display: block;
-        left: 0;
-        max-height: 100%; /* Causes scroll bars when content is too large */
-        max-width: 100%;
-        overflow-y: auto;
-        padding: 10px 20px 10px;
-        position: absolute;
-        right: 0;
-        width: 100%;
-    }
-
-    h2 {
+    h1 {
         border-bottom: 1px solid $border-gray;
         font-size: 18px;
         font-weight: 400;
         line-height: 26px;
-        padding-bottom: 5px;
+        padding: 0 15px 5px;
+        box-sizing: padding-box;
+        margin: 0 -15px;
     }
 
-    .msg {
-        font-size: 18px;
-        line-height: 26px;
-        min-height: 150px;
+    .error {
+        color: $full-error-text-color;
+        font-size: 16px;
+        line-height: 24px;
+
+        // Make vertically centered.
+        display-flex();
+        align-items(center);
+
+        .msg {
+            flex(1);
+        }
 
         a {
             color: $full-error-text-color;
         }
 
         p {
+            font-size: 22px;
+            font-weight: 100;
             margin: 15px 0 0;
+            line-height: 30px;
 
             &:last-child {
                 margin-bottom: 10px;
@@ -55,8 +51,25 @@
     .buttons {
         background: none;
         border-top: none;
-        margin: 10px -10px -10px;
+        margin: 10px -15px -10px;
         padding: 10px 0;
     }
 
+}
+
+
+@media $small-min-width {
+    .full-error {
+        .error {
+            position: static;
+        }
+
+        .msg {
+            min-height: 0;
+        }
+
+        .buttons {
+            margin: 10px -15px -10px;
+        }
+    }
 }
