Add pin widget code (bug 963633)

--- a/public/stylus/inc/vars.styl
+++ b/public/stylus/inc/vars.styl
@@ -5,7 +5,8 @@ $dark-gray = #333;
 $vibrant-gray = #3b3b3b;
 $medium-gray = #666;
 $battleship-gray = #999;
-$light-gray = #ccc;
+$dot-gray = #3E3B39;
+$light-gray = #c2c2c2;
 $pale-gray = #eaeaea;
 $light-blue = #0096dc;
 $bright-blue = #00caf2;
