--- a/public/stylus/spartacus.styl
+++ b/public/stylus/spartacus.styl
@@ -6,6 +6,7 @@
 @import '_buttons';
 @import '_full-error';
 @import '_forms';
+@import '_pin';
 
 $mp-fonts-path = '../lib/mp-fonts-stylus';
 @import '../lib/mp-fonts-stylus/fonts';
@@ -124,14 +125,5 @@ main {
     &:active,
     &:focus {
         background-position: right bottom;
-    }
-}
-
-.pinform {
-    input {
-        font-size: 30px;
-        width: 1.5em;
-        height: 1.5em;
-        text-align: center;
     }
 }
