Add styleguide (bug 970451)

--- a/public/stylus/spartacus.styl
+++ b/public/stylus/spartacus.styl
@@ -19,7 +19,7 @@ body, html {
     width: 100%;
 }
 
-#app {
+.app {
     background: $bg-color;
     grain();
     height: 100%;
@@ -31,6 +31,7 @@ body, html {
 
 main {
     height: 100%;
+    overflow: auto;
 }
 
 .page {
