--- a/styleguide/templates/iframed/base.html
+++ b/styleguide/templates/iframed/base.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="/css/spartacus.css">
   </head>
   <body>
-    <div id="app" class="app"></div>
-    <script data-main="/js/main.js" src="/lib/js/requirejs/require.js"></script>
+    <div id="app" class="app">{% block content %}{% endblock %}</div>
   </body>
 </html>
