Address review comments + add basic router tests

--- a/server/templates/test.html
+++ b/server/templates/test.html
@@ -6,6 +6,9 @@
   </head>
 <body>
   <div id="mocha"></div>
+  <script src="/lib/js/mocha/mocha.js"></script>
+  <script src="/lib/js/chai/chai.js"></script>
+  <script src="/lib/js/sinon/index.js"></script>
   <script data-main="/testlib/testrunner.js" src="/lib/js/requirejs/require.js"></script>
 </body>
 </html>
