--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="/css/spartacus.css">
   </head>
   <body
+    class="dev-server"
+    data-base-api-url="{{ settings.baseApiUrl }}"
     data-privacy-policy="https://marketplace.firefox.com/privacy-policy"
+    data-reset-user-url="{{ settings.resetUserURL }}"
     data-terms-of-service="https://marketplace.firefox.com/terms-of-use"
     data-unverified-issuer="{{ settings.browseridUnverifiedIssuerl }}"
     data-verify-url="{{ settings.verifyUserURL }}"
-    data-reset-user-url="{{ settings.resetUserURL }}"
     >
     <div id="app" class="app"></div>
     <div id="progress" class="progress"></div>
