Add payment cancellation and abstract errors.

--- a/public/stylus/_full-error.styl
+++ b/public/stylus/_full-error.styl
@@ -1,8 +1,14 @@
 .full-error {
     background-color: $grain-bg-color;
+    bottom: 0;
     grain();
+    left: 0;
     max-width: 100%;
     padding: 0 10px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 10;
 
     h1 {
         border-bottom: 1px solid $border-gray;
