--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
-<main class="{% block mainclass %}{% endblock %}">
-  <div class="page">
+<div class="page {% block pageclass %}{% endblock %}">
+  <div class="inner">
     {% block page %}{% endblock %}
   </div>
-</main>
+</div>
