--- a/public/stylus/spartacus.styl
+++ b/public/stylus/spartacus.styl
@@ -50,7 +50,7 @@ main {
     overflow: auto;
 }
 
-.page {
+.inner {
     display-flex();
     flex-direction(column);
     margin: 0 auto;
@@ -62,7 +62,7 @@ main {
 }
 
 @media $small-min-width {
-    .page {
+    .inner {
         display: block;
         padding-top: 30px;
         // outline: 1px solid red;
