--- a/server/templates/test.html
+++ b/server/templates/test.html
@@ -6,6 +6,7 @@
   </head>
 <body>
   <div id="mocha"></div>
+  <div id="error"></div>
   <script src="/lib/js/mocha/mocha.js"></script>
   <script src="/lib/js/chai/chai.js"></script>
   <script src="/lib/js/sinon/index.js"></script>
