Add error messages for pin UI + tests

--- a/public/stylus/spartacus.styl
+++ b/public/stylus/spartacus.styl
@@ -45,7 +45,8 @@ body, html {
     max-width: 100%;
 }
 
-main {
+main,
+.page {
     height: 100%;
     overflow: auto;
 }
@@ -143,4 +144,8 @@ main {
     &:focus {
         background-position: right bottom;
     }
+}
+
+.err-msg {
+    color: $blood-red;
 }
