--- a/templates/pin-form.html
+++ b/templates/pin-form.html
@@ -13,6 +13,7 @@
     <span></span>
     <span></span>
   </div>
+  <p class="err-msg hidden"></p>
 </section>
 
 <menu class="buttons" type="toolbar">
