Show forgot pin link when relevant (bug 1003882)

--- a/public/stylus/_pin.styl
+++ b/public/stylus/_pin.styl
@@ -5,12 +5,15 @@
     z-index: -1;
 }
 
+.pin-container {
+    margin: 0 auto;
+    max-width: 300px;
+}
+
 .pinbox {
     display: block;
     overflow: hidden;
     font-size: 0;
-    max-width: 300px;
-    margin: 0 auto;
 
     span {
         display: inline-block;
