--- a/public/stylus/_typography.styl
+++ b/public/stylus/_typography.styl
@@ -29,3 +29,15 @@ h4 {
     font-size: 14px;
     line-height: 22px;
 }
+
+a:link,
+a:visited,
+a:hover,
+a:active,
+a:focus {
+    color: $light-blue;
+    font-size: 13px;
+    line-height: 18px;
+    text-decoration: none;
+}
+
