Refactor models and views and use more of Backbone.js

--- a/public/stylus/_forms.styl
+++ b/public/stylus/_forms.styl
@@ -59,15 +59,11 @@ textarea {
     }
 }
 
-
-
 .help {
     color: $battleship-gray;
     font-size: 11px;
     margin-top: 0.25em;
 }
-
-
 
 .flex-container {
     display-flex();
@@ -114,7 +110,7 @@ textarea {
             }
 
             &[type="checkbox"] {
-                min-width: auto;
+                width: auto;
                 margin-left: 5px;
             }
         }
