--- a/public/stylus/_throbber.styl
+++ b/public/stylus/_throbber.styl
@@ -3,6 +3,7 @@
 .throbber {
     // This will normally be overlaid hence it needs it's own background.
     background: $bg-color;
+    background: rgba(244, 244, 244, 0.9);
     bottom: 0;
     grain();
     left: 0;
@@ -14,7 +15,6 @@
     z-index: 10;
 
     .msg {
-        max-width: calc(100%-40px);
         text-align: center;
     }
 }
