--- a/public/stylus/inc/global.styl
+++ b/public/stylus/inc/global.styl
@@ -12,6 +12,14 @@
     }
 }
 
+.hidden {
+    display: none;
+}
+
+.hidden.show {
+    display: block;
+}
+
 .no-wrap {
     white-space: nowrap;
 }
