--- a/public/stylus/lib/normalize.styl
+++ b/public/stylus/lib/normalize.styl
@@ -286,9 +286,9 @@ button,
 input,
 select,
 textarea {
-    font-family: inherit; /* 1 */
-    font-size: 100%; /* 2 */
-    margin: 0; /* 3 */
+    font-family: inherit;
+    font-size: 100%;
+    margin: 0;
 }
 
 /**
@@ -322,7 +322,7 @@ select {
  */
 
 button,
-html input[type="button"], /* 1 */
+html input[type="button"],
 input[type="reset"],
 input[type="submit"] {
     -webkit-appearance: button; /* 2 */
