--- a/public/stylus/_pin.styl
+++ b/public/stylus/_pin.styl
@@ -18,6 +18,7 @@
     span {
         display: inline-block;
         vertical-align: middle;
+        width: 22%;
         width: calc(25% - 7.5px);
         margin-right: 10px;
         border: 1px solid $light-gray;
@@ -34,6 +35,7 @@
             display: inline-block;
             // This is a percentage of the parent width
             // minus the padding between.
+            padding-bottom: 55%;
             padding-bottom: calc(60% - 10px);
             width: 1px;
             margin-left: -1px;
@@ -46,6 +48,7 @@
             content: '';
             display: inline-block;
             border-radius: 50%;
+            -webkit-border-radius: 50%;
             background: $medium-gray;
             position: absolute;
             top: 25%;
