Add events to was-locked (bug 1014204)

--- a/templates/reset-start.html
+++ b/templates/reset-start.html
@@ -2,7 +2,7 @@
 {% import "_macros.html" as macro %}
 
 {% block page %}
-  <section class="content">
+  <section class="content reset-start">
     <h1>{{ gettext('Forgot your Pin?') }}</h1>
     <p>{{ gettext('Are you sure you want to reset your pin? You must sign in to Persona to reset your pin.') }}</p>
   </section>
