--- a/templates/was-locked.html
+++ b/templates/was-locked.html
@@ -8,7 +8,7 @@
   </section>
 
   <menu class="buttons" type="toolbar">
-    {{ macro.button(gettext('Reset Pin')) }}
+    {{ macro.button(gettext('Reset Pin'), modifier='reset-start') }}
     {{ macro.button(gettext('Continue'), modifier='cta') }}
   </menu>
 {% endblock %}
