--- a/templates/reset-start.html
+++ b/templates/reset-start.html
@@ -3,7 +3,7 @@
 
 {% block page %}
   <section class="content reset-start">
-    <h1>{{ gettext('Forgot your Pin?') }}</h1>
+    <h1>{{ gettext('Forgot your pin?') }}</h1>
     <p>{{ gettext('Are you sure you want to reset your pin? You must sign in to Persona to reset your pin.') }}</p>
   </section>
 
