Hookup reset flow (pt1) (bug 1003882)

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -15,6 +15,7 @@
     data-terms-of-service="https://marketplace.firefox.com/terms-of-use"
     data-unverified-issuer="{{ settings.browseridUnverifiedIssuerl }}"
     data-verify-url="{{ settings.verifyUserURL }}"
+    data-reverify-url="{{ settings.reVerifyUserURL }}"
     data-static-docs-url="{{ settings.staticURL }}"
     >
     <main id="app">
