buttonText -> ctaText (bug 1023375)

--- a/templates/pin-form.html
+++ b/templates/pin-form.html
@@ -24,7 +24,7 @@
 {% block buttons %}
 <menu class="buttons" type="toolbar">
   {{ macro.button(gettext('Cancel'), modifier='cancel') }}
-  {{ macro.button(buttonText, modifier='cta', disabled=true) }}
+  {{ macro.button(ctaText, modifier='cta', disabled=true) }}
 </menu>
 {% endblock %}
 
