Add wait views (bug 1024451)

--- a/public/stylus/_buttons.styl
+++ b/public/stylus/_buttons.styl
@@ -1,4 +1,6 @@
 a.button,
+a:link.button,
+a:visited.button,
 .button {
     background-color: $button-bg-color;
     border: 1px solid $button-border-color;
@@ -8,6 +10,7 @@ a.button,
     font: 500 14px/40px "Fira Sans", "Open Sans", "Helvetica Neue", Arial, sans-serif;
     gradient-two-color($button-bg-color, $button-bg-color2);
     height: 40px;
+    line-height: 40px;
     min-width: 75px;
     overflow: hidden;
     padding: 0 10px;
