--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <title>Webpay | {{ gettext('Loading...')}}</title>
+    <title>Webpay | {{ gettext('Loading')}}</title>
     <link rel="stylesheet" href="/css/spartacus.css">
   </head>
   <body
@@ -26,7 +26,7 @@
         <div class="throbber">
           <div class="inner">
             <progress></progress>
-            <p class="msg">{{ gettext('Loading...')}}</p>
+            <p class="msg">{{ gettext('Loading')}}</p>
           </div>
         </div>
       </div>
