--- a/templates/pin-form.html
+++ b/templates/pin-form.html
@@ -15,7 +15,7 @@
       <span></span>
     </div>
     {% if showForgotPin -%}
-      <p class="forgot-pin"><a href="#">{{ gettext('Forgot your pin?') }}</a></p>
+      <p class="forgot-pin"><a href="#">{{ gettext('Forgot your PIN?') }}</a></p>
     {%- endif %}
     <p class="err-msg hidden"></p>
   </div>
