--- a/templates/reset-start.html
+++ b/templates/reset-start.html
@@ -3,8 +3,8 @@
 
 {% block page %}
   <section class="content reset-start">
-    <h1>{{ gettext('Forgot your pin?') }}</h1>
-    <p>{{ gettext('Are you sure you want to reset your pin? You must sign in to Persona to reset your pin.') }}</p>
+    <h1>{{ gettext('Forgot your PIN?') }}</h1>
+    <p>{{ gettext('Are you sure you want to reset your PIN? You must sign in to Persona to reset your PIN.') }}</p>
   </section>
 
   <menu class="buttons" type="toolbar">
