Click for re-auth (bug 1026593)

--- a/templates/login.html
+++ b/templates/login.html
@@ -2,8 +2,8 @@
 
 {% block page %}
 <section class="login">
-  <h1>{{ gettext('Sign In') }}</h1>
-  <p>{{ gettext('Sign in to continue with the payment') }}</p>
+  <h1>{{ heading }}</h1>
+  <p>{{ msg }}</p>
   <a id="signin" class="sign-in" href="#">{{ gettext('Sign in') }}</a>
 </section>
 {% endblock %}
