--- a/templates/reset-start.html
+++ b/templates/reset-start.html
@@ -9,6 +9,6 @@
 
   <menu class="buttons" type="toolbar">
     {{ macro.button(gettext('Back'), modifier='back') }}
-    {{ macro.button(gettext('Continue'), modifier='cta') }}
+    {{ macro.button(gettext('Reset'), modifier='cta') }}
   </menu>
 {% endblock %}
