--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -26,6 +26,7 @@
     data-trans-status-pending="0"
     data-trans-status-failed="4"
     data-trans-status-cancelled="5"
+    data-settings="{{ settings.appSettingsOverrides }}"
     >
     <main id="app">
       {# View placeholder #}
