--- a/templates/login.html
+++ b/templates/login.html
@@ -4,6 +4,8 @@
 <section class="login">
   <h1>{{ heading }}</h1>
   <p>{{ msg }}</p>
-  <a id="signin" class="sign-in" href="#">{{ gettext('Sign in') }}</a>
+  {# 'needsclick' class is needed to prevent fastclick firing a synthetic
+     click event otherwise persona will ignore the login #}
+  <a id="signin" class="sign-in needsclick" href="#">{{ gettext('Sign in') }}</a>
 </section>
 {% endblock %}
