Add error codes (bug 1033433)

--- a/templates/error.html
+++ b/templates/error.html
@@ -7,7 +7,7 @@
   <section class="content error">
     <div class="msg">
       <h1>{{ heading }}</h1>
-      <p>{{ msg }}</p>
+      <p class="message">{{ msg }}</p>
       {% if errorCode %}<p class="error-code">{{ errorCode }}</p>{% endif %}
     </div>
   </section>
