Fixup styleguide and make iframe size sticky

--- a/styleguide/templates/_sidebar-nav.html
+++ b/styleguide/templates/_sidebar-nav.html
@@ -19,6 +19,7 @@
 {% set navigation_bar = [
     ['/create-pin', 'create-pin', 'Create Pin'],
     ['/error', 'error', 'Error'],
+    ['/locked', 'locked', 'Locked'],
     ['/throbber', 'throbber', 'Throbber'],
     ['/was-locked', 'was-locked', 'Was locked']
 ] -%}
