--- a/styleguide/templates/base-example.html
+++ b/styleguide/templates/base-example.html
@@ -17,6 +17,10 @@
           <span class="glyphicon glyphicon-phone"></span> Android Phone
         </button>
 
+        <button type="button" class="btn btn-default btn-xs android-tablet-size">
+          <span class="glyphicon glyphicon-phone lg"></span> Android Tablet
+        </button>
+
         <button type="button" class="btn btn-default btn-xs full-screen">
           <span class="glyphicon glyphicon-fullscreen"></span> Full Screen
         </button>
