--- a/styleguide/templates/iframed/create-pin.html
+++ b/styleguide/templates/iframed/create-pin.html
@@ -1,6 +1,6 @@
 {% extends "iframed/base.html" %}
 
 {% block content %}
-  {% include "create-pin.html" %}
+  {% include "pin-form.html" %}
 {% endblock %}
 
