--- a/styleguide/templates/index.html
+++ b/styleguide/templates/index.html
@@ -12,6 +12,7 @@
 <ul>
   <li><span class="glyphicon glyphicon-lock"></span> Trusted UI - This is the trusted UI window shown on FireFox OS devices. This is used within all the payment flows.</li>
   <li><span class="glyphicon glyphicon-phone"></span> Android: The android size is a typical android device viewport size as an example as to what this will look like in Firefox for Android.</li>
+  <li><span class="glyphicon glyphicon-phone lg"></span> Android Tablet: is a typical android device viewport size as an example as to what this will look like in Firefox for Android.</li>
   <li><span class="glyphicon glyphicon-fullscreen"></span> Full-screen mode uses the full-screen api to full screen the example element.</li>
 </ul>
 
