Defer payment provider logout (bug 1037513)
The API to start a transaction doesn't return
a payment provider because the transaction has not
been created yet. This defers payment provider logout
until right before we redirect to the provider's web
flow.

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -16,6 +16,7 @@
     data-unverified-issuer="{{ settings.browseridUnverifiedIssuerl }}"
     data-verify-url="{{ settings.verifyUserURL }}"
     data-reverify-url="{{ settings.reVerifyUserURL }}"
+    data-bango-logout-url="/fake/bango/logout/"
     data-static-docs-url="{{ settings.staticURL }}"
     {% if transaction_status_url -%}
       data-trans-start-url="{{ transaction_status_url }}"
