--- a/public/stylus/_throbber.styl
+++ b/public/stylus/_throbber.styl
@@ -1,14 +1,3 @@
-@keyframes spin {
-    from {
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg);
-    }
-    to {
-        -webkit-transform: rotate(365deg);
-        transform: rotate(365deg);
-    }
-}
-
 .throbber {
     // This will normally be overlaid hence it needs it's own background.
     background: $bg-color;
@@ -28,10 +17,9 @@
     .progress {
         display: block;
         margin: 80px auto 0;
-        height: 50px;
-        width: 50px;
-        animation(1s spin infinite steps(12));
-        background: transparent embedurl('throbber.png') no-repeat 50% 50%;
+        height: 53px;
+        width: 53px;
+        background: transparent embedurl('throbber-53.gif') no-repeat 50% 50%;
     }
 }
 
