--- a/public/stylus/_typography.styl
+++ b/public/stylus/_typography.styl
@@ -40,3 +40,17 @@ a:focus {
     line-height: 18px;
     text-decoration: none;
 }
+
+@media $small-min-width {
+    h1 {
+        border-bottom: 1px solid $light-gray;
+        font-size: 30px;
+        margin-bottom: 30px;
+        padding-bottom: 10px;
+    }
+
+    p {
+        font-size: 22px;
+        line-height: 28px;
+    }
+}
