--- a/public/stylus/spartacus.styl
+++ b/public/stylus/spartacus.styl
@@ -64,7 +64,7 @@ main,
 @media $small-min-width {
     .inner {
         display: block;
-        padding-top: 30px;
+        padding: 85px;
     }
 }
 
