--- a/public/stylus/_full-error.styl
+++ b/public/stylus/_full-error.styl
@@ -66,6 +66,13 @@
 
 @media $small-min-width {
     .full-error {
+
+        h1 {
+            font-size: 30px;
+            margin: 0;
+            padding: 0 0 15px;
+        }
+
         .error {
             position: static;
         }
