--- a/public/stylus/_throbber.styl
+++ b/public/stylus/_throbber.styl
@@ -2,6 +2,7 @@
     // This will normally be overlaid hence it needs it's own background.
     background: $bg-color;
     background: rgba(244, 244, 244, 0.9);
+    padding-top: 80px;
     bottom: 0;
     grain();
     left: 0;
@@ -16,7 +17,7 @@
 
     .progress {
         display: block;
-        margin: 80px auto 0;
+        margin: 0 auto;
         height: 53px;
         width: 53px;
         background: transparent embedurl('throbber-53.gif') no-repeat 50% 50%;
